# bazel-epoxy-annotation-processor

./: WORKSPACE
src/main/: BUILD.bazel
src/main/java/com/matthewcheok/bazeltest/: ItemCustomView.kt  MainActivity.kt
src/main/res/layout/: activity_main.xml
